Align page navigator on collections correctly

--- a/src/app/dashboard/collections/collections-home/collections-home.component.css
+++ b/src/app/dashboard/collections/collections-home/collections-home.component.css
@@ -1,30 +1,30 @@
 .btn::-moz-placeholder {
-  color: #DDDDDD;
+  color: #dddddd;
   opacity: 1;
   filter: alpha(opacity=100);
 }
 
 .btn:-moz-placeholder {
-  color: #DDDDDD;
+  color: #dddddd;
   opacity: 1;
   filter: alpha(opacity=100);
 }
 
 .btn::-webkit-input-placeholder {
-  color: #DDDDDD;
+  color: #dddddd;
   opacity: 1;
   filter: alpha(opacity=100);
 }
 
 .btn:-ms-input-placeholder {
-  color: #DDDDDD;
+  color: #dddddd;
   opacity: 1;
   filter: alpha(opacity=100);
 }
 
 .btn {
-  background-color: #FFFFFF;
-  border: 1px solid #E3E3E3;
+  background-color: #ffffff;
+  border: 1px solid #e3e3e3;
   border-radius: 4px;
   color: #565656;
   padding: 8px 12px;
@@ -34,8 +34,8 @@
 }
 
 .btn:focus {
-  background-color: #FFFFFF;
-  border: 1px solid #AAAAAA;
+  background-color: #ffffff;
+  border: 1px solid #aaaaaa;
   -webkit-box-shadow: none;
   box-shadow: none;
   outline: 0 !important;
@@ -108,4 +108,9 @@ hr {
   font-style: italic;
   margin: 4px 0;
   padding: 0 0 10px 0;
+}
+
+.books {
+  display: flex;
+  flex-direction: column;
 }
