--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -11,7 +11,6 @@
   background-position: center center;
   background-size: cover;
   margin: 0;
-  box-shadow: 0 0 8px #8a8a8a;
 }
 .page-header .page-header-image {
   position: absolute;
